--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	//스프링 시큐리티 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 
 
 	// h2 DB 라이브러리 추가
