build: MySQL 연동

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	// mapstruct 라이브러리 추가
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
+	// 개인: MySQL 라이브러리 추가
+	implementation 'mysql:mysql-connector-java:8.0.31'
 }
 
 tasks.named('test') {
