--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 spring.application.name=travelog
 
-
-
-
-
-
+#H2
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.h2.console.enabled=true
+
+#MySQL ??
+#MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/travelogdb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=1234
+
+#true ?? ? jpa ??? ?? ??
+spring.jpa.show-sql=true
+
+#DDL ??? DB? ?? ??? ?? ??
+spring.jpa.hibernate.ddl-auto=update
+
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ???
+spring.jpa.properties.hibernate.format_sql=true
