--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -34,13 +34,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	//스프링 시큐리티 추가
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//스프링 시큐리티 추가 - 보안 설정 문제로 주석 처리
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// h2 DB 라이브러리
+	//runtimeOnly 'com.h2database:h2'
 
-	// h2 DB 라이브러리 추가
-	runtimeOnly 'com.h2database:h2'
-	// mapstruct 라이브러리 추가
+	// mapstruct 라이브러리
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
