--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+**/generated/**
 
 ### NetBeans ###
 /nbproject/private/
@@ -36,5 +37,3 @@ out/
 ### VS Code ###
 .vscode/
 
-### Java Code ###
-**/MapperImpl.java
