--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 
 #DDL ??? DB? ?? ??? ?? ??
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
