fix: application.properties 충돌

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=travelog
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/travelog?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 #true ?? ? jpa ??? ?? ??
 spring.jpa.show-sql=true
@@ -20,4 +20,7 @@ spring.jpa.hibernate.ddl-auto=create
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
 
+
+# devtools
+spring.devtools.livereload.enabled=true
 
