--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	//스프링 시큐리티 추가 - 보안 설정 문제로 주석 처리
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 	// h2 DB 라이브러리
 	//runtimeOnly 'com.h2database:h2'
