--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=travelog
 #MySQL ??
 #MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/travelogdb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/travelog?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 
 #true ?? ? jpa ??? ?? ??
 spring.jpa.show-sql=true
@@ -19,3 +19,5 @@ spring.jpa.hibernate.ddl-auto=create
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
+
+
