--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # devtools
 spring.devtools.livereload.enabled=true
+
+# file size limit
+spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-request-size=16MB
