feat: boardPost, post.html 수정완

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=travelog
 #MySQL ??
 #MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/travelog?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/travelogdb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 #true ?? ? jpa ??? ?? ??
 spring.jpa.show-sql=true
